--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,15 @@ language: cpp
 compiler:
   - clang
 notifications:
-  email: false
-env:
-  matrix:
-    - JULIAVERSION="juliareleases"
-    - JULIAVERSION="julianightlies"
+  email: 
+      - github@donner.at
 before_install:
   - sudo add-apt-repository ppa:staticfloat/julia-deps -y
-  - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
+  - sudo add-apt-repository ppa:staticfloat/juliareleases -y
   - sudo apt-get update -qq -y
   - sudo apt-get install libpcre3-dev julia -y
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
-  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("InformedDifferentialEvolution")'
+  - julia -e 'Pkg.init(); Pkg.add("FactCheck")'
+  - julia -e 'run(`ln -s $(pwd()) $(Pkg.dir("InformedDifferentialEvolution"))`); Pkg.pin("InformedDifferentialEvolution")'
+  - julia -e 'Pkg.resolve()'
+  - julia ~/.julia/v0.3/InformedDifferentialEvolution/test/runtests.jl
